--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/typeorm": "^11.0.0",
     "@polkadot/api": "^15.9.3",
-    "mysql": "^2.18.1",
+    "mysql2": "^3.14.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.23"
